--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@payloadcms/db-mongodb": "latest",
-    "@payloadcms/email-resend": "3.29.0",
+    "@payloadcms/email-resend": "^3.35.1",
     "@payloadcms/next": "latest",
     "@payloadcms/payload-cloud": "latest",
     "@payloadcms/richtext-lexical": "latest",
