--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
+    "crypto": "^1.0.1",
     "graphql": "^16.8.1",
     "lucide-react": "^0.483.0",
     "next": "15.2.2",
