--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "postcss": "^8.5.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.1",
     "remark-gfm": "^4.0.1",
     "resend": "^4.2.0",
