--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@payloadcms/next": "latest",
     "@payloadcms/payload-cloud": "latest",
     "@payloadcms/richtext-lexical": "latest",
+    "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-alert-dialog": "^1.1.10",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -84,6 +85,7 @@
     "@types/node": "^22.5.4",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.2.2",
     "prettier": "^3.4.2",
