--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
-DATABASE_URI=mongodb://127.0.0.1/your-database-name
-PAYLOAD_SECRET=YOUR_SECRET_HERE
+DATABASE_URI=mongodb://127.0.0.1/scf-mongo
 NEXT_PUBLIC_HOST_URL=http://localhost:3000
+PAYLOAD_SECRET=
+
+RESEND_API_KEY=
 OPENAI_API_KEY=
+
 STRIPE_SECRET_KEY=
 NEXT_PUBLIC_STRIPE_KEY=
