feat: updated form id logic

--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.3.2",
-    "@payloadcms/db-mongodb": "latest",
-    "@payloadcms/email-resend": "^3.35.1",
-    "@payloadcms/next": "latest",
-    "@payloadcms/payload-cloud": "latest",
-    "@payloadcms/richtext-lexical": "latest",
+    "@payloadcms/db-mongodb": "^3.56.0",
+    "@payloadcms/email-resend": "^3.56.0",
+    "@payloadcms/next": "^3.56.0",
+    "@payloadcms/payload-cloud": "^3.56.0",
+    "@payloadcms/richtext-lexical": "^3.56.0",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-alert-dialog": "^1.1.10",
     "@radix-ui/react-avatar": "^1.1.3",
