--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,12 @@ DATABASE_URI=mongodb://127.0.0.1/scf-mongo
 NEXT_PUBLIC_HOST_URL=http://localhost:3000
 PAYLOAD_SECRET=
 
-RESEND_API_KEY=
 OPENAI_API_KEY=
 
 STRIPE_SECRET_KEY=
 NEXT_PUBLIC_STRIPE_KEY=
 STRIPE_WEBHOOK_SIGNING_SECRET=
+
+SMTP_HOST=
+SMTP_USER=
+SMTP_PASS=
