--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,5 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
-.yarn/install-state.gz
-
-/.idea/*
-!/.idea/runConfigurations
-
-# testing
-/coverage
 
 # next.js
 /.next/
@@ -21,23 +10,13 @@
 
 # misc
 .DS_Store
-*.pem
+/.vscode
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
-.env*.local
-
-# vercel
-.vercel
+# local env file
+.env
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
 
-.env
 
-/media
