--- a/package.json
+++ b/package.json
@@ -58,17 +58,15 @@
     "crypto": "^1.0.1",
     "graphql": "^16.8.1",
     "lucide-react": "^0.483.0",
-    "next": "15.2.2",
+    "next": "^15.5.3",
     "next-themes": "^0.4.6",
     "openai": "^4.90.0",
     "payload": "latest",
     "postcss": "^8.5.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.1",
     "remark-gfm": "^4.0.1",
-    "resend": "^4.2.0",
     "sharp": "0.32.6",
     "shiki": "^3.2.1",
     "sonner": "^2.0.1",
@@ -85,7 +83,6 @@
     "@types/node": "^22.5.4",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
-    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.2.2",
     "prettier": "^3.4.2",
